--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.10.16",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.10.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
